# crm-digital-FTE

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANUAL-TESTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
agent/: __init__.py  __main__.py  cache.py  context.py  customer_success_agent.py  prompts.py
agent/tools/: __init__.py  conversation.py  customer.py  escalation.py  knowledge.py  metrics.py  response.py  ticket.py
api/: main.py
database/: pool.py
database/migrations/: 001_initial_schema.sql  002_seed_knowledge_base.py  run_migration.py
docs/: scaling-notes.md
k8s/: api-deployment.yml  api-hpa.yml  ingress.yml  verify-deployment.sh
specs/001-customer-success-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastapi-backend/: tasks.md
specs/003-redis-caching-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fastapi-background-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-web-support-form/: tasks.md
specs/007-k8s-deployment-readiness/: quickstart.md  tasks.md
specs/008-observability-monitoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  validate_acceptance.py
web/: package-lock.json  package.json
web/src/app/: page.tsx  (+1 more)
(+47 files in other folders)
